feat: lookups workaround
